[package]
name = "customerr"
version = "0.1.0"
description = "an experiment to create custom error classes using Neon"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-6"]

[dependencies]
once_cell = "1.8.0"
