[package]
name = "wasi_wit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    anyhow                      = "1.0"
    env_logger                  = "0.9"
    log                         = { version = "0.4", default-features = false }
    tokio                       = { version = "1.4.0", features = [ "full" ] }
    wasmtime                    = "0.33"
    wasmtime-wasi               = "0.33"
    wasi-common                 = "0.33"
    wasi-cap-std-sync           = "0.33"
    wit-bindgen-wasmtime        = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "2e654dc82b7f9331719ba617a36ed5967b2aecb0" }

[workspace]