[tool.poetry]
name = "py_runtime"
version = "0.1.0"
description = ""
authors = ["Jiaxiao Zhou <jiazho@microsoft.com>"]

[tool.poetry.dependencies]
python = "^3.7"
wasmtime = "0.33.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
